--- a/src/SubtitleFontHelper/App.xaml
+++ b/src/SubtitleFontHelper/App.xaml
@@ -2,8 +2,22 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SubtitleFontHelper"
-             Startup="Application_Startup">
+             Startup="Application_Startup"
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary x:Name="Language">
+                    <ResourceDictionary.MergedDictionaries>
+                        <ResourceDictionary Source="/Lang/zh_CN.xaml"/>
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+                <ResourceDictionary x:Name="Styles">
+                    <ResourceDictionary.MergedDictionaries>
+                        <ResourceDictionary Source="/Styles.xaml"/>
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
